  * New Enabled: LDP RFC 5561
  * New Enabled: LDP RFC 5918
  * New Enabled: LDP RFC 5919
  * New Enabled: LDP RFC 6667
  * New Enabled: LDP RFC 7473
  * New Enabled: OSPF RFC 4552
  * New Enabled: ISIS SPF Backoff draft
  * New Enabled: PIM Unnumbered Interfaces
  * New Enabled: PIM RFC 4611
  * New Enabled: PIM Sparse Mode
  * New Enabled: NHRP RFC 2332
  * New Enabled: Label Manager

 -- FRRouting-Dev <dev@lists.frrouting.org>  Wed, 05 Apr 2017 22:23:42 -0500

frr (2.0-0) RELEASED; urgency=medium

  * Switchover to FRR

 -- FRRouting-Dev <dev@lists.frrouting.org>  Mon, 23 Jan 2017 16:30:22 -0400

quagga (0.99.24+cl3u5) RELEASED; urgency=medium

  * Closes: CM-12846 - Resolve Memory leaks in 'show ip bgp neighbor json'
  * Closes: CM-5878  - Display all ospf peers with 'show ip ospf neighbor detail all'
  * Closes: CM-5794  - Add support for IPv6 static to null0
  * Closes: CM-13060 - Reduce JSON memory usage.
  * Closes: CM-10394 - protect 'could not get instance' error messages with debug
  * Closes: CM-11173 - Move netlink error messages undeer a debug
  * Closes: CM-13328 - Fixes route missing in hardware after reboot

 -- dev-support <dev-support@cumulusnetworks.com>  Fri, 11 Nov 2016 22:13:29 -0400

quagga (0.99.24+cl3u4) RELEASED; urgency=medium

  * Closes: CM-12687 - Buffer overflow in zebra RA code

 -- dev-support <dev-support@cumulusnetworks.com>  Wed, 31 Aug 2016 12:36:10 -0400

quagga (0.99.24+cl3u3) RELEASED; urgency=medium

  * New Enabled: Merge up-to 0.99.24 code from upstream
  * New Enabled: Additional CLI simplification
  * New Enabled: Various Bug Fixes

 -- dev-support <dev-support@cumulusnetworks.com>  Thu, 04 Aug 2016 08:43:36 -0700

quagga (0.99.23.1-1+cl3u2) RELEASED; urgency=medium

  * New Enabled: VRF - See Documentation for how to use 
  * New Enabled: Improved interface statistics
  * New Enabled: Various vtysh improvements
  * New Enabled: Numerous compile warnings and SA fixes
  * New Enabled: Improved priviledge handlingA